- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P2: Important
 - 
    6.2.10, 6.5.3, 6.6.0
 - 
    MacBook Air M1, 2020 (macOS 13.5.2), Xcode 14.2
 
- 
        
 - 
        a81395f2c (dev), 4075ffa49 (6.7), 9a3800173 (6.6), 45dd975f6 (tqtc/lts-6.5), 8df8ea3a2 (tqtc/lts-6.2)
 - 
        G&UI Finishing 2023
 
Code
import QtQuick.Controls.Basic import QtQuick.Dialogs ApplicationWindow { width: 640 height: 480 visible: true Button { text: "Open dialog" onClicked: dlg.open() } FileDialog { // or FolderDialog id: dlg onCurrentFolderChanged: console.log("Current folder:", currentFolder) } }
Steps to reproduce
- Run the code above
 - Click the button
 - Navigate into a few different folders
 
Expected outcomes (Windows)
- Step 2: As the dialog opens into the PWD, the console prints the path to the PWD
 - Step 3: As you navigate into a different folder, the console prints the new folder that you just opened
 
Actual outcomes (macOS)
- Step 2: As the dialog opens into the PWD, the console doesn't print any folder
 - Step 3: As you navigate into a different folder, the console prints the previous folder that you opened (and the first message prints an empty string instead of the initial folder)
 - When the dialog first opens and each time you change folders, the console prints a repeated warning:
 
2023-11-23 14:44:42.560 appTest[6017:147181] +[CATransaction synchronize] called within transaction