src/plugins/platforms/cocoa/qcocoafiledialoghelper.h
@@ -38,6 +38,7 @@ public:
 
 public: // for QNSOpenSavePanelDelegate
     void panelClosed(NSInteger result);
+    void panelDirectoryDidChange(NSString *path);
 
 private:
     void createNSOpenSavePanelDelegate();
